feat: added admin actions on frontend
- updated auth to use authula models
