# apps/server/docs/swagger.json
@@ -690,7 +690,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/types.Permission"
+                                "$ref": "#/definitions/types.UserPermissionInfo"
                             }
                         }
                     },
@@ -1689,7 +1689,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.UsersPage"
+                            "$ref": "#/definitions/types.UsersPage"
                         }
                     },
                     "401": {
@@ -1719,7 +1719,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.CreateUserRequest"
+                            "$ref": "#/definitions/types.CreateUserRequest"
                         }
                     }
                 ],
@@ -1727,7 +1727,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.CreateUserResponse"
+                            "$ref": "#/definitions/types.CreateUserResponse"
                         }
                     },
                     "400": {
@@ -1797,7 +1797,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.GetUserByIDResponse"
+                            "$ref": "#/definitions/types.GetUserByIDResponse"
                         }
                     },
                     "401": {
@@ -1876,7 +1876,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.UpdateUserRequest"
+                            "$ref": "#/definitions/types.UpdateUserRequest"
                         }
                     }
                 ],
@@ -1884,7 +1884,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.UpdateUserResponse"
+                            "$ref": "#/definitions/types.UpdateUserResponse"
                         }
                     },
                     "400": {
@@ -2078,7 +2078,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/server_internal_models.AdminUserSession"
+                                "$ref": "#/definitions/types.AdminUserSession"
                             }
                         }
                     },
@@ -2497,7 +2497,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.SignInRequest"
+                            "$ref": "#/definitions/github_com_Authula_authula_plugins_email-password_types.SignInRequest"
                         }
                     }
                 ],
@@ -2505,7 +2505,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.SignInResponse"
+                            "$ref": "#/definitions/github_com_Authula_authula_plugins_email-password_types.SignInResponse"
                         }
                     },
                     "400": {
@@ -2537,7 +2537,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.SignUpRequest"
+                            "$ref": "#/definitions/types.SignUpRequest"
                         }
                     }
                 ],
@@ -2545,7 +2545,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_models.SignUpResponse"
+                            "$ref": "#/definitions/types.SignUpResponse"
                         }
                     },
                     "400": {
@@ -2666,6 +2666,31 @@
         }
     },
     "definitions": {
+        "github_com_Authula_authula_plugins_email-password_types.SignInRequest": {
+            "type": "object",
+            "properties": {
+                "callback_url": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_Authula_authula_plugins_email-password_types.SignInResponse": {
+            "type": "object",
+            "properties": {
+                "session": {
+                    "$ref": "#/definitions/models.Session"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
         "models.Account": {
             "type": "object",
             "properties": {
@@ -2711,14 +2736,64 @@
                 }
             }
         },
-        "server_internal_models.AdminUserSession": {
+        "models.Session": {
             "type": "object",
             "properties": {
-                "session": {
-                    "$ref": "#/definitions/server_internal_models.Session"
+                "created_at": {
+                    "type": "string"
                 },
-                "state": {
-                    "$ref": "#/definitions/types.AdminSessionState"
+                "expires_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "ip_address": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_agent": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "email_verified": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "metadata": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
@@ -2789,51 +2864,14 @@
                 }
             }
         },
-        "server_internal_models.CreateUserRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "email_verified": {
-                    "type": "boolean"
-                },
-                "image": {
-                    "type": "string"
-                },
-                "metadata": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "server_internal_models.CreateUserResponse": {
-            "type": "object",
-            "properties": {
-                "user": {
-                    "$ref": "#/definitions/server_internal_models.User"
-                }
-            }
-        },
         "server_internal_models.GetMeResponse": {
             "type": "object",
             "properties": {
                 "session": {
-                    "$ref": "#/definitions/server_internal_models.Session"
+                    "$ref": "#/definitions/models.Session"
                 },
                 "user": {
-                    "$ref": "#/definitions/server_internal_models.User"
-                }
-            }
-        },
-        "server_internal_models.GetUserByIDResponse": {
-            "type": "object",
-            "properties": {
-                "user": {
-                    "$ref": "#/definitions/server_internal_models.User"
+                    "$ref": "#/definitions/models.User"
                 }
             }
         },
@@ -2882,60 +2920,6 @@
                 }
             }
         },
-        "server_internal_models.Session": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "expires_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "ip_address": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_agent": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "server_internal_models.SignInRequest": {
-            "type": "object",
-            "properties": {
-                "callback_url": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "server_internal_models.SignInResponse": {
-            "type": "object",
-            "properties": {
-                "session": {
-                    "$ref": "#/definitions/server_internal_models.Session"
-                },
-                "user": {
-                    "$ref": "#/definitions/server_internal_models.User"
-                }
-            }
-        },
         "server_internal_models.SignOutRequest": {
             "type": "object",
             "properties": {
@@ -2952,41 +2936,6 @@
             "properties": {
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "server_internal_models.SignUpRequest": {
-            "type": "object",
-            "properties": {
-                "callback_url": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "image": {
-                    "type": "string"
-                },
-                "metadata": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "server_internal_models.SignUpResponse": {
-            "type": "object",
-            "properties": {
-                "session": {
-                    "$ref": "#/definitions/server_internal_models.Session"
-                },
-                "user": {
-                    "$ref": "#/definitions/server_internal_models.User"
                 }
             }
         },
@@ -3142,79 +3091,6 @@
                 }
             }
         },
-        "server_internal_models.UpdateUserRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "email_verified": {
-                    "type": "boolean"
-                },
-                "image": {
-                    "type": "string"
-                },
-                "metadata": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "server_internal_models.UpdateUserResponse": {
-            "type": "object",
-            "properties": {
-                "user": {
-                    "$ref": "#/definitions/server_internal_models.User"
-                }
-            }
-        },
-        "server_internal_models.User": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "email_verified": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "image": {
-                    "type": "string"
-                },
-                "metadata": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "server_internal_models.UsersPage": {
-            "type": "object",
-            "properties": {
-                "next_cursor": {
-                    "type": "string"
-                },
-                "users": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/server_internal_models.User"
-                    }
-                }
-            }
-        },
         "types.AddRolePermissionRequest": {
             "type": "object",
             "properties": {
@@ -3260,6 +3136,17 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "types.AdminUserSession": {
+            "type": "object",
+            "properties": {
+                "session": {
+                    "$ref": "#/definitions/models.Session"
+                },
+                "state": {
+                    "$ref": "#/definitions/types.AdminSessionState"
                 }
             }
         },
@@ -3475,6 +3362,37 @@
                 }
             }
         },
+        "types.CreateUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "email_verified": {
+                    "type": "boolean"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "metadata": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.CreateUserResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
         "types.CreateUserStateRequest": {
             "type": "object",
             "properties": {
@@ -3558,6 +3476,14 @@
             "properties": {
                 "state": {
                     "$ref": "#/definitions/types.AdminSessionState"
+                }
+            }
+        },
+        "types.GetUserByIDResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/models.User"
                 }
             }
         },
@@ -3801,6 +3727,43 @@
                 }
             }
         },
+        "types.SignUpRequest": {
+            "type": "object",
+            "properties": {
+                "callback_url": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "metadata": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.SignUpResponse": {
+            "type": "object",
+            "properties": {
+                "session": {
+                    "$ref": "#/definitions/models.Session"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
         "types.StartImpersonationRequest": {
             "type": "object",
             "properties": {
@@ -3917,6 +3880,37 @@
                 }
             }
         },
+        "types.UpdateUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "email_verified": {
+                    "type": "boolean"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "metadata": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.UpdateUserResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
         "types.UpsertSessionStateRequest": {
             "type": "object",
             "properties": {
@@ -4027,6 +4021,20 @@
                 },
                 "role_weight": {
                     "type": "integer"
+                }
+            }
+        },
+        "types.UsersPage": {
+            "type": "object",
+            "properties": {
+                "next_cursor": {
+                    "type": "string"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.User"
+                    }
                 }
             }
         }
